fixed issue where office number was not showing

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -17,7 +17,7 @@
   }
 
 .title {
-    background-color: rgb(83, 79, 80);
+    background-color: rgb(138, 94, 0);
     color: rgb(228, 213, 213);
     padding: 5%;
     text-align: center;
